Updated css filename

--- a/src/jade/popup.jade
+++ b/src/jade/popup.jade
@@ -1,7 +1,7 @@
 html5
     head
         title Find My Ratio
-        link(rel="stylesheet" type="text/css" href="../css/main.css")
+        link(rel="stylesheet" type="text/css" href="../css/popup.css")
     body
         #form
             .column--half
